<resources>
    <string name="app_name">DRAG</string>
    <string name="title_activity_draw">DrawActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="round_count">Round Count:</string>
    <string name="player_count">Player Count:</string>
    <string name="start">start</string>
    <string name="forfeit">forfeit</string>
    <string name="options">Choose Your Options</string>

    <string name="hint">Hint</string>
    <string name="guess">Guess</string>
    <string name="sub">Submit</string>
    <string name="Over">Finished</string>
    <string name="review">Game Review</string>

    <string name="car">Car</string>
    <string name="bus">Bus</string>
    <string name="house">House</string>
    <string name="boat">Boat</string>
    <string name="tree">Tree</string>
    <string name="book">Book</string>
    <string name="camera">Camera</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="rounds">"Round: "</string>
    <string name="drawing_word">Drawing word:</string>
    <string name="guessed_word">Guessed word:</string>

    <!-- Game Mode -->
    <string name="online">online</string>
    <string name="offline">offline</string>


    <!-- Create challenge screen -->
    <string name="create_challenge_title">Create Challenge</string>
    <string name="create_challenge_challenges_name">Name of the Challenge</string>
    <string name="create_challenge_prompt_message">Number of players</string>
    <string name="create_challenge_button_label">Post challenge</string>
    <string name="create_challenge_button_label_in_short">Post it</string>
    <string name="error_creating_challenge">Could not create challenge.</string>

    <string name="accept_challenge_dialog_title">Accept %s\'s challenge?</string>
    <string name="accept_challenge_dialog_ok">OK</string>
    <string name="accept_challenge_dialog_cancel">Cancel</string>
    <string name="loading">Loading…</string>


    <!-- Game list screen -->
    <string name="list_screen_title">Challenges</string>
    <string name="list_create_challenge_button_label">New Challenge</string>
    <string name="list_menu_update_label">Refresh</string>
    <string name="error_getting_list">Could not fetch challenges list</string>
    <string name="error_accepting_challenge">Could not accept challenge</string>
    <string name="max_players">Max Players</string>
    <string name="round_number">Round Number</string>
    <string name="create">Create</string>
    <string name="new_challenge">New Challenge</string>
</resources>